Fixed card gap

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
         padding-top: 1rem;
         border: 1px solid white;
         border-radius: 15px;
-        gap: 1.5rem;
+        gap: .5rem;
 
         Picture {
             width: 288px;
